Fixed wording after Mom's input

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -79,8 +79,9 @@ In these cases, proxy voting allows voters to skip incurring the costs while
 still having their voice heard by allowing a proxy to perform the work once on
 behalf of all voting power transferred to it.
 
-This often also has the effect of increasing the system welfare by
-increasing the accuracy of the system~\cite[sec.~1.1]{Cohensius2017}.
+In addition to reducing individual agents' work, proxy voting also often has
+the effect of increasing the system welfare by increasing the accuracy of the
+system~\cite[sec.~1.1]{Cohensius2017}.
 However, this increase does not work in all circumstances and so proxy voting
 should be used after investigating the voting mechanism used and the potential
 pitfalls of that mechanism under proxy voting.
