--- a/references/research.bib
+++ b/references/research.bib
@@ -92,7 +92,9 @@ Page 62 might be interesting. It states random democracy might need 1000+ partic
   abstract   = {This paper has argued that changing technology has increased opportunities for voter participation in the legislative process and has presented a proposal which takes some advantage of such possibilities. The objective has not been so much to criticize our present legislative voting arrangement, but to suggest for the future an alternative that might prove superior.},
   comment    = {Accessible: [https://www.jstor.org/stable/30022612](https://www.jstor.org/stable/30022612)
 
-Possibly the origins of proxy voting--mostly political.},
+Oft cited source of proxy voting--mostly political.
+
+There is not the first time proxy voting was discussed. There are other articles in 1969 that discuss similar ideas, as well as Oregon discussing similar ideas in 1912.},
   doi        = {10.1007/BF01718736},
   readstatus = {skimmed},
   refid      = {Miller1969},
