--- a/thesis.tex
+++ b/thesis.tex
@@ -137,6 +137,15 @@ For a Single Line While Including Everything}
     \include{content/chapter2-experimental-design}
     \include{content/chapter3-results}
     \include{content/chapter4-conclusions-and-further-work}
+% TODO Research to be done:
+%   - Any similar papers
+%   - Finite proxy voting
+%  Those below will likely require a specific type of sensor
+%   - Current sensor error mitigation techniques
+%   - Typical sensor error rates
+%   - Sensor variance
+%   - Sensor error distributions (e.g.\ Gaussian)
+
 
     % Endmatter
     % For BibTeX references: specify a .bib file and a style.
