--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -105,13 +105,7 @@ For this paper's purposes, a poor distribution of measurements will make one
 proxy a super voter and increase the error of the result.
 
 
-%% TODO: I don't like this paragraph, rewrite it
-%While use cases of proxy voting are typically focussed on situations that
-%are political or sociological in nature, this study aims to discover similar
-%advantages in other realms.
-%Primarily, the hope is to reduce the impact of measurement error by using
-%a combination of `expensive' and `inexpensive' measurements to obtain a
-%highly-accurate metric, about which the system can be confident.
+% FIXME: This section ends a little harshly, maybe I should wrap it up better
 
 
 \section{Related Work}\label{sec:related-work}
@@ -132,12 +126,19 @@ This concept is exactly what this paper plans to exploit: create and use expert
 proxies when generating a measurement and allow less accurate techniques to use
 them as proxies.
 
+\etal{Mueller}~\cite{Mueller1972} reaffirms the need for expert proxies and
+goes on to discuss how many of such proxies would be needed under random
+selection for a sufficiently accurate opinion to be made.
+These estimates range from 500 to 1000~\cite[para.~III.2]{Mueller1972}, and
+while this study uses preassigned proxies, these proxies' error will be
+random and so \etal{Mueller}'s estimates may come in to play.
+However, a primary goal of this paper is to use far fewer measurements than the
+quoted 500, as that many measurements would likely be far more expensive than
+simply using a single, more costly form of measurement with better accuracy.
 
-% TODO: Explain Mueller1972
-
-
-Directly related to this paper,\ \cite{Cohensius2017} explores proxy voting with
-infinite voters using set of \textit{mechanisms} or \textit{voting rules}.
+Directly related to this paper,\ \etal{Cohensius}~\cite{Cohensius2017} explore
+proxy voting with infinite voters using set of \textit{mechanisms}, also
+known as \textit{voting rules}.
 These are algorithms used to consolidate votes into the end result.
 The mechanisms discussed by \etal{Cohensius} included mean\footnote{An
 interesting aside, though not directly relevant to this
