--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -16,7 +16,7 @@ This is particularly critical in high-risk or high-cost scenarios, such as when
 human life is involved, or when the cost of using a sensor, taking a
 measurement, or running an experiment is particularly expensive.  % Maybe expand on what "expensive" means?
 This paper explores the idea of using an adapted form of proxy voting, as
-described in~\cite[para.~I.3]{Miller1969}, as a way of taking multiple
+described in~\cite[para.~1.3]{Miller1969}, as a way of taking multiple
 measurements to ensure accuracy while minimizing the cost of taking those
 measurements.
 
@@ -121,7 +121,7 @@ voting, and so is not directly applicable to the problem at hand.
 However, he does bring up the idea this paper calls \textit{expert proxies},
 those being individuals who would `vote as [the inactive voter] would if only
 [the inactive voter] had the time and knowledge to participate
-directly'~\cite[para.~I.3]{Miller1969}.
+directly'~\cite[para.~1.3]{Miller1969}.
 This concept is exactly what this paper plans to exploit: create and use expert
 proxies when generating a measurement and allow less accurate techniques to use
 them as proxies.
@@ -129,7 +129,7 @@ them as proxies.
 \etal{Mueller}~\cite{Mueller1972} reaffirms the need for expert proxies and
 goes on to discuss how many of such proxies would be needed under random
 selection for a sufficiently accurate opinion to be made.
-These estimates range from 500 to 1000~\cite[para.~III.2]{Mueller1972}, and
+These estimates range from 500 to 1000~\cite[para.~3.2]{Mueller1972}, and
 while this study uses preassigned proxies, these proxies' error will be
 random and so \etal{Mueller}'s estimates may come in to play.
 However, a primary goal of this paper is to use far fewer measurements than the
