Minor phrasing changes

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -140,12 +140,12 @@ Directly related to this paper,\ \etal{Cohensius}~\cite{Cohensius2017} explore
 proxy voting with infinite voters using set of \textit{mechanisms}, also
 known as \textit{voting rules}.
 These are algorithms used to consolidate votes into the end result.
-The mechanisms discussed by \etal{Cohensius} included mean\footnote{An
+The mechanisms discussed by \etal{Cohensius} include mean\footnote{An
 interesting aside, though not directly relevant to this
 study, is \etal{Cohensius} discovered the most extreme opinions will be
 active under strategic participation when using a mean voting
 mechanism\cite[lemma~9]{Cohensius2017}.}
-and median rules on continuous spaces, as well as majority rule on
+and median rules in continuous spaces, as well as majority rule in
 binary spaces.
 \etal{Cohensius} allow for both random and strategic participation, meaning any
 agent could decide whether it served as a proxy or not.
