Fixed some typos

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -50,7 +50,7 @@ results.
 \textit{Proxy voting} involves allowing agents to transfer their voting power
 from themselves to another agent, known as a \textit{proxy}\cite[para.~1.4]
 {Cohensius2017}.
-By doing so, the transferring agent looses their ability to directly affect the
+By doing so, the transferring agent loses their ability to directly affect the
 voting game.
 In other words, the transferring agent does not vote in an election but rather
 affects the election vicariously through the proxy to which they transferred
@@ -109,7 +109,7 @@ proxy a super voter and increase the error of the result.
 
 
 \section{Related Work}\label{sec:related-work}
-Proxy voting and liquid democracy are a well-discussed topics with a number of
+Proxy voting and liquid democracy are well-discussed topics with a number of
 papers investigating their viability, advantages, and disadvantages.
 Many of these studies focus on political and societal uses for these techniques,
 but some of their discoveries can be used for this paper's purposes.
