--- a/thesis.tex
+++ b/thesis.tex
@@ -80,6 +80,7 @@
 % manuscript by using \doi{}.
 \usepackage{doi}
 
+\usepackage{enumitem}  % MDH: Used for more controls over `enumerate`
 \usepackage{util}  % MDH: Contains my custom commands
 
 % Set spacing around figures and tables to triple space
