--- a/util.sty
+++ b/util.sty
@@ -7,3 +7,6 @@
 \newcommand*{\etal}[1]{#1~et~al.\@}
 
 \newcommand*{\titleditem}[1]{\item\textbf{#1:}\\}
+
+% Source: https://tex.stackexchange.com/a/100930
+\newcommand*{\getcurrentindex}{\number\numexpr\value{enumi}\relax}
