--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -68,6 +68,14 @@
 % TODO: I don't currently have anything in here about agents with different
 %  costs. I might not get to that until after running the cost-less
 %  experiments, but I ought to look for opportunities to implement it.
+%
+%  Costs can potentially be added post-experiment, since the outcome of the
+%  experiment does not depend on the costs of the agents. This would
+%  primarily allow for identifying a cost-ratio and ideal number of agents.
+%
+%  It might also be interesting to develop a system that uses a budget
+%  without a predefined number of proxies and inactives.
+
 The experiments will be performed in two phases.
 First, all data will be collected.
 This is done primarily to make all desired data available during the analysis
