Apparently I'm addicted to notes

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -5,7 +5,8 @@
 \chapter{EXPERIMENT DESIGN}\label{ch:experiment-design}
 % TODO: What is the purpose of these experiments?
 
-% TODO: Maybe make a system design section/chapter?
+% TODO: Maybe make a system design section/chapter? This would go over how
+%  the actualy system works as opposed to how the experiments are set up.
 
 
 \section{Experiments}\label{sec:experiments}
@@ -31,6 +32,9 @@
 - Dimensions?
 - Cost per proxy
 - Cost per non-proxy
+- Seed
+    - Metaparameter--allows reproduction of an iteration. Each iteration
+      will have a unique seed.
 
 \section{Mechanisms}\label{sec:mechanisms}
 - Explain what mechanisms are, as well as my expansion using weight mechanisms.
