Added post-iteration dialogue

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -131,8 +131,9 @@ steps.
 % FIXME: I might want to specify how many times a combination is ran
 Each combination of parameters will be run a number of times in order to obtain
 a fair spread of error for that set of parameters.
-After each iteration, % TODO: what data is collected?
-
+After each iteration, the combination of parameters will be recorded as well
+as the estimated truth, the error, as well as the rest of the
+\hyperref[subsec:criteria]{criteria}.
 
 % TODO: Caveats
 
