Basic Chapter2 intro written

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -2,12 +2,14 @@
 %  This document contains chapter 2 of the thesis.
 %
 
-\chapter{EXPERIMENT DESIGN}\label{ch:experiment-design}
-% TODO: What is the purpose of these experiments?
-
 % TODO: Maybe make a system design section/chapter? This would go over how
 %  the actualy system works as opposed to how the experiments are set up.
-
+\chapter{EXPERIMENT DESIGN}\label{ch:experiment-design}
+In order to identify the ability of proxy voting to serve as a correctional
+method, a number of experiments have been devised.
+The primary goal of these analyses is to identify the strengths and
+weaknesses of proxy voting under certain conditions and attempt to minimize
+the costs of ensuring accurate measurements.
 
 \section{Experiments}\label{sec:experiments}
 - Infinite (a la \cite{Cohensius2017})
