Experiments section close written

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -57,6 +57,10 @@ near its full potential, this setup may be beneficial where many measurements
 can be taken or when untrained agents are considerably less expensive than
 experts.
 
+Both setups will be examined in this study.
+Fortunately, the process of how to create the setups is identical.
+The only difference is which type of agent serves as proxies.
+
 %  - Finite with agent costs
 
 \subsection{Criteria}\label{subsec:criteria}
