--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -11,6 +11,24 @@ The primary goal of these analyses is to identify the strengths and
 weaknesses of proxy voting under certain conditions and attempt to minimize
 the costs of ensuring accurate measurements.
 
+\section{Preliminaries}\label{sec:preliminaries}
+All agents will operate within a defined space~$\chi$, where $\chi \subseteq
+\mathbb{R}^k$ and $k \geq 1$ dimensions, as described
+by~\cite[para.~2.1]{Cohensius2017}.
+Specifically, this paper will focus on an interval space $\chi = [a, b]^1$.
+The space of $\chi = [a, b]^2$ could be used to expand, but whereas
+measurements are typically performed in a singular dimension (one doesn't
+measure both the length and width with a single measurement--it takes two)
+and would ultimately only increase the complexity of the system, this
+exercise is left for further work.
+
+Using the space $\chi$ allows each agent's preference, which for this paper's
+purposes represents the agent's estimation of the truth $\mathbf{T}$, to be
+represented by a position within this space.
+
+% TODO: There's probably more we can fit in here. If not, maybe make
+%   Preliminaries a subsection of Experiments?
+
 \section{Experiments}\label{sec:experiments}
 This study explores the idea of using finite voters, as opposed to the
 infinite voters described in~\cite{Cohensius2017}.
