"Experiments" section renamed

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -37,8 +37,8 @@ purposes represents $\mathbb{T}_a$, to be represented as a position within
 this space.
 This likewise means $\mathbb{T}_\mathbb{S}$ will be a position within $\chi$.
 
-
-\section{Experiments}\label{sec:experiments}
+\section{Experiment Criteria and Parameters}\label{sec:experiment-criteria
+-and-parameters}
 This study explores the idea of using finite voters, as opposed to the
 infinite voters described in~\cite{Cohensius2017}.
 These voters' positions will be randomly selected using a distribution, which
