Specified the position of the Gaussian distribution

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -48,8 +48,8 @@ By design, there are two primary types of voters: expert and untrained.
 \textit{Expert voters} are agents that give a more accurate estimate of the
 true value.
 These voters have tighter extremes for estimated values or are chosen from
-a more accurate distribution (such as Gaussian) allowing them to be more
-certain in their estimation.
+a more accurate distribution (such as Gaussian about $\mathbb{T}$) allowing
+them to be more certain in their estimation.
 These voters represent better, though likely more expensive, methods for
 taking a measurement.  % TODO: such as. . .
 
